# financial_dashboard_backend

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  vercel.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_sync_transactions_notes_soft_delete.py
app/: config.py  database.py  main.py
app/core/: dependencies.py  exceptions.py  security.py
app/models/: base.py  transaction.py  user.py
app/routers/: auth.py  dashboard.py  health.py  transactions.py  users.py
app/schemas/: dashboard.py  transaction.py  user.py
app/services/: auth_service.py  dashboard_service.py  transaction_service.py  user_service.py
tests/: conftest.py  test_dashboard.py  test_rbac.py
